--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,5 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
-  {% include partials/post-comments.html %}
+  {% include comments.html %}
 </article>
