--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-<form method="POST" action="https://api.staticman.net/v2/entry/dancwilliams/staticman/master/comments">
+<form method="POST" action="https://api.staticman.net/v2/entry/dancwilliams/dancwilliams.github.io/master/comments">
   <input name="options[redirect]" type="hidden" value="http://www.networkhobo.net.com">
   <!-- e.g. "2016-01-02-this-is-a-post" -->
   <input name="options[slug]" type="hidden" value="{{ page.slug }}">
