--- a/_includes/comments_2.html
+++ b/_includes/comments_2.html
@@ -1,5 +1,7 @@
 <form id="comments_2" class="form" action="{{ site.staticmanUrl }}" method="post">
     <input name="options[slug]" type="hidden" value="{{ page.slug }}">
+    <input name="options[parent]" type="hidden" value="{{ page.slug }}">
+    <input type="hidden" name="options[origin]" value="{{ site.url }}{{ page.url }}">
     
     <input type="text" name="company" class="text-field" style="display: none">
     <input class="form__field text-field" type="text" name="fields[name]" placeholder="Name" required/>
