--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
-
+  
+  {% include post-comments.html %}
   {% include comments_2.html %}
 </article>
