--- a/_includes/post-comments.html
+++ b/_includes/post-comments.html
@@ -3,7 +3,7 @@
 		<div class="comments__existing js-comments" {% if site.data.comments[page.slug] == null %}aria-hidden="true"{% endif %}>
 			<h2 class="comments__heading heading-2">Comments</h2>
 
-			{% if site.data.comments[post.slug] %}
+			{% if site.data.comments[page.slug] %}
 				{% assign comments = site.data.comments[page.slug] | sort %}
 				
 				{% for comment in comments %}
