--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,6 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
   
-  {% include post-comments.html %}
-  {% include comments_2.html %}
+  <!-- {% include post-comments.html %}
+  {% include comments_2.html %} -->
 </article>
