--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,16 +2,23 @@
 layout: default
 ---
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+<main id="main" role="main" class="main">
+  <article class="post post--full">
+    <div class="constrain">
+    	<h1 class="post__title feature-title">{% include helpers/generate-feature-title.html title=page.title visualTitle=page.visualTitle %}</h1>
+    	<p class="post-meta post-meta--emphasis">{% if page.author %}Guest article by {{ page.author }} — {% endif %}{% include helpers/format-date.html date=page.date %}</p>
+    </div>
+    
+    <div class="post__body body-text">
+      {% if page.preface %}
+        <div class="preface">
+          {{ page.preface | markdownify }}
+        </div>
+      {% endif %}
+      
+      {{ content | replace: '<!--tomb-->', ' &#8718;'}}
+    </div>
 
-  <div class="entry">
-    {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-  
-  {% include partials/post-comments.html %}
-</article>
+    {% include partials/post-comments.html %}
+  </article>
+</main>
