--- a/_includes/helpers/generate-feature-title.html
+++ b/_includes/helpers/generate-feature-title.html
@@ -63,7 +63,7 @@
   {% assign lines = lines | split: separator %}
 {% endif %}
 
-<p class="feature-title__full">{{ title }}</p>
+<!-- <p class="feature-title__full">{{ title }}</p>
 {% for line in lines %}
   <span aria-hidden="true" class="feature-title__part">{{ line }}</span>
-{% endfor %}
+{% endfor %} -->
