--- a/_includes/helpers/generate-feature-title.html
+++ b/_includes/helpers/generate-feature-title.html
@@ -64,7 +64,6 @@
 {% endif %}
 
 <p class="feature-title__full">{{ title }}</p>
-<!-- {% for line in lines %}
+{% for line in lines %}
   <span aria-hidden="true" class="feature-title__part">{{ line }}</span>
 {% endfor %}
--->
