--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,19 +13,14 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" /> -->
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    -->
+
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
   <body>
-    
-    {% include svg.html %}
-		{% include partials/search-toggle.html %}
-		{% include partials/masthead.html %}
-    {% include partials/search-results.html %}
-    
+       
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
