--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,8 @@
 /* BASE RULES */
 /**************/
 
+$font-family-primary: 'AdobeGaramond', Georgia, Times, serif;
+
 html {
   font-size: 100%;
 }
